google maps api configurations.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+# Google Maps Configuration
+google.maps.api.key=AIzaSyB9TgwsRIwLSpC3wEXhzvbpG7C9kTIZjKI
+
