--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.mvc.view.suffix=.jsp
 # Google Maps Configuration
 google.maps.api.key=AIzaSyB9TgwsRIwLSpC3wEXhzvbpG7C9kTIZjKI
 
+# Spring Security Configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.SecurityFilterAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
