--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,6 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<jjwt.version>0.11.5</jjwt.version>
 		<spring.security.enabled>false</spring.security.enabled>
 	</properties>
 	<dependencies>
@@ -124,6 +123,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- Redis Dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		
+		<!-- Prometheus/Micrometer for metrics -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 	</dependencies>
 
