--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,7 @@ app.async.core-pool-size=2
 app.async.max-pool-size=5
 app.async.queue-capacity=10
 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=UTC
+
